--- a/client/app/sass/elyoos/home/_blogDetail.scss
+++ b/client/app/sass/elyoos/home/_blogDetail.scss
@@ -3,15 +3,17 @@
 
   #blog-header {
     height: 72px;
-    width: 100%;
+    min-width: 300px;
     padding: 16px;
     .user-avatar {
+      cursor: pointer;
       border-radius: 50%;
       height: 40px;
       width: 40px;
       margin-right: 12px;
     }
     .title-container {
+      cursor: pointer;
       .title {
         font-size: 14px;
       }
